Add worklog autofill command and improve dev UX

--- a/env.local.example
+++ b/env.local.example
@@ -1,6 +1,6 @@
 export JIRA_HOST=https://jira.corezoid.com
-export JIRA_USER=mw071175maj
-export JIRA_PASSWORD='Zxczxc23$'
-# Укажи реальный ключ OpenAI
+export JIRA_USER=REPLACE_ME
+export JIRA_PASSWORD='REPLACE_ME'
+# Укажи реальный ключ OpenAI (или оставь пустым, если LLM не нужен)
 export OPENAI_API_KEY=sk-REPLACE_ME
 
